# prismzip

./: .gitignore  CMakeLists.txt  README.md  multi_thread.out  single_thread.out  single_thread.przm  test.przm  toolchain-mingw64.cmake
app/: CMakeLists.txt
app/include/: cli.h
app/src/: cli.cpp  main.cpp
lib/: CMakeLists.txt
lib/include/prism/: compression.h  hashing.h
lib/include/prism/core/: archive_extractor.h  archive_lister.h  archive_propertier.h  archive_reader.h  archive_remover.h  archive_verifier.h  archive_writer.h  file_utils.h  logging.h  result_types.h  thread_pool.h  types.h  ui_utils.h
lib/include/prism/hashing/: blake3.h  crc.h  openssl_hasher.h  xxhash.h
lib/src/compression/: brotli.cpp  brotli.h  bzip2.cpp  bzip2.h  compression.cpp  lz4.cpp  lz4.h  lzma.cpp  lzma.h  lzma2.cpp  lzma2.h  lzo.cpp  lzo.h  snappy.cpp  snappy.h  zlib.cpp  zlib.h  zstd.cpp  zstd.h
lib/src/core/: archive_extractor.cpp  archive_lister.cpp  archive_propertier.cpp  archive_reader.cpp  archive_remover.cpp  archive_verifier.cpp  archive_writer.cpp  file_utils.cpp  logging.cpp  types.cpp  ui_utils.cpp  ui_utils.h
lib/src/hashing/: blake3.cpp  crc.cpp  hashing.cpp  openssl_hasher.cpp  xxhash.cpp
tests/: CMakeLists.txt  test_archive.cpp  test_archive_remover.cpp  test_archive_verifier.cpp  test_compression.cpp  test_file_utils.cpp  test_hashing.cpp  test_ui_utils.cpp  test_utils.h
